avidec: override sample size of 1024 for VBR AAC

Fixes Ticket1755

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>